--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -117,3 +117,88 @@ jobs:
           Get-PSDrive -PSProvider FileSystem | Select-Object Name, Root, @{Name='Free(GB)'; Expression={$_.Free / 1GB -as [int]}}, @{Name='Used(GB)'; Expression={$_.Used / 1GB -as [int]}}, @{Name='Size(GB)'; Expression={$_.Size / 1GB -as [int]}} | Format-Table -AutoSize
           Write-Host "============================================="
 
+
+      - name: Coverity 설치 프로그램 실행 
+        shell: pwsh
+        env:
+          COVERITY_ORIGINAL_INSTALLER_NAME: cov-analysis-win64-2024.12.1.exe
+        run: |
+          $installerPath = "./${{ env.COVERITY_ORIGINAL_INSTALLER_NAME }}" 
+          
+          # -----------------------------------------------------------------
+          # 1. license.dat 파일의 절대 경로 구성
+          # -----------------------------------------------------------------
+          $currentWorkingDirectory = Get-Location # 현재 작업 디렉토리 (예: D:\a\Ctest\Ctest)
+          $licenseFullAbsolutePath = Join-Path $currentWorkingDirectory "license.dat"
+          
+          # -----------------------------------------------------------------
+          # 2. Coverity 설치 프로그램 자체 로그 파일 경로 구성
+          # (이 로그 파일에 설치 실패의 가장 상세한 원인이 기록됩니다. 인자명 확인 필수!)
+          # -----------------------------------------------------------------
+          $coverityInstallerLogLocation = "C:\Coverity\coverity_install_verbose.log" # 설치 경로에 로그 생성
+          $installerLogArgument = "--log-file=`"$coverityInstallerLogLocation`"" # 인자명과 함께 절대 경로 전달 (백틱으로 인용부호 이스케이프)
+
+          # -----------------------------------------------------------------
+          # 3. 모든 설치 인자를 하나의 문자열로 구성 (절대 경로 포함)
+          # 인자에 공백이 포함될 경우를 대비하여 `"$변수명`"` (백틱과 큰따옴표) 형식으로 감쌉니다.
+          # -----------------------------------------------------------------
+          $installerArguments = "-q -console --installation.dir=C:\\Coverity --license.region=5 --license.agreement=agree --license.type.choice=0 --license.cov.path=`"$licenseFullAbsolutePath`" $installerLogArgument"
+          
+          # -----------------------------------------------------------------
+          # 디버깅 출력: 최종 인자 문자열 확인 (매우 중요!)
+          # -----------------------------------------------------------------
+          Write-Host "DEBUG: 실행할 설치 파일 경로: $installerPath"
+          Write-Host "DEBUG: 사용될 라이선스 파일 절대 경로: $licenseFullAbsolutePath"
+          Write-Host "DEBUG: 사용될 설치 프로그램 상세 로그 경로: $coverityInstallerLogLocation"
+          Write-Host "DEBUG: 사용될 최종 설치 인자: $installerArguments"
+          Write-Host "설치 프로그램 출력이 콘솔에 직접 표시됩니다. (주의: 설치 프로그램이 콘솔 출력을 제공하지 않을 수 있습니다.)"
+          
+          # -----------------------------------------------------------------
+          # 4. Coverity 설치 프로그램 실행 (PowerShell의 '&' 호출 연산자 사용)
+          # -----------------------------------------------------------------
+          try {
+              & "$installerPath" $installerArguments # 직접 실행
+              $exitCode = $LASTEXITCODE # 실행된 프로세스의 종료 코드를 가져옵니다.
+          } catch {
+              Write-Error "Coverity 설치 프로그램 호출 중 PowerShell 예외 발생: $($_.Exception.Message)"
+              $exitCode = 9999
+          }
+          
+          if ($exitCode -ne 0) {
+              Write-Error "Coverity 설치 프로그램 실행 중 오류 발생. 종료 코드: $exitCode"
+              
+              # -----------------------------------------------------------------
+              # 5. 실패 시 상세 로그 파일 내용 출력 (가장 중요!)
+              # -----------------------------------------------------------------
+              Write-Host "`n==== Coverity 설치 프로그램 상세 로그 파일 내용 ===="
+              if (Test-Path $coverityInstallerLogLocation) {
+                  Get-Content $coverityInstallerLogLocation | Write-Host
+              } else {
+                  Write-Host "상세 로그 파일 ($coverityInstallerLogLocation)을 찾을 수 없거나 생성되지 않았습니다."
+              }
+              Write-Host "===================================================="
+
+              # (임시 폴더 로그 확인 로직 - 이전 답변에서 제공된 부분. 필요시 유지.)
+              $coveritySpecificLog2 = Join-Path $env:TEMP "coverity_installer_*.log"
+              Write-Host "`n==== Coverity 설치 프로그램 임시 폴더 로그 확인 ===="
+              Get-ChildItem -Path $env:TEMP -Filter "coverity_installer_*.log" | ForEach-Object {
+                  Write-Host "임시 폴더 로그 ($($_.FullName)) 내용:"
+                  Get-Content $_.FullName | Write-Host
+              } | Out-Null
+              Write-Host "======================================================"
+              
+              exit 1 # 워크플로우를 실패 처리
+          }
+          Write-Host "Coverity 설치 프로그램 실행 완료."
+          
+          # -----------------------------------------------------------------
+          # 6. 설치 후 Coverity CLI PATH 설정 및 확인
+          # -----------------------------------------------------------------
+          $coverityBinPath = "C:\Coverity\bin" # 인자로 지정한 설치 경로 기준
+          if (Test-Path $coverityBinPath) {
+              $env:PATH += ";$coverityBinPath"
+              Write-Host "Coverity CLI 경로가 PATH에 추가되었습니다."
+              cov-build --version # 설치 확인 명령어
+          } else {
+              Write-Warning "Coverity 설치 경로에 bin 폴더를 찾을 수 없어 PATH에 추가하지 못했습니다."
+          }
