--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,6 +12,14 @@ on:
 
 env:
   MSBUILD_PATH: ''
+  # installer details (사용자 정의)
+  INSTALLER_DOWNLOAD_URL: http://160.187.202.144/downloads/cov-analysis-win64-2024.12.1.exe # <-- 여기에 실제 서버 URL 입력
+  INSTALLER_NAME: cov-analysis-win64-2024.12.1.exe # 다운로드될 파일명
+  # 캐시 키에 사용할 설치 파일의 버전을 명시합니다.
+  # installer URL이나 파일 내용이 변경될 때마다 이 버전을 수동으로 업데이트해야 캐시가 갱신됩니다.
+  INSTALLER_VERSION: 2024.12.1 # <--- 설치 파일의 버전이 바뀔 때마다 이 값을 변경해주세요!
+  # 압축 해제 후 생성될 원본 설치 파일 이름
+  COVERITY_ORIGINAL_INSTALLER_NAME: cov-analysis-win64-2024.12.1.exe
 
 jobs:
   Build-And-Analysis:
@@ -118,57 +126,64 @@ jobs:
           Write-Host "============================================="
 
 
-      - name: Coverity 설치 프로그램 실행 
+
+
+      - name: Coverity 설치 프로그램 실행
         shell: pwsh
         env:
           COVERITY_ORIGINAL_INSTALLER_NAME: cov-analysis-win64-2024.12.1.exe
         run: |
-          $installerPath = "${{ env.COVERITY_ORIGINAL_INSTALLER_NAME }}" 
+          # 실행할 설치 파일의 절대 경로 (현재 작업 디렉토리에 있음)
+          $installerPath = "./${{ env.COVERITY_ORIGINAL_INSTALLER_NAME }}" 
           
-          # -----------------------------------------------------------------
-          # 1. license.dat 파일의 절대 경로 구성
-          # -----------------------------------------------------------------
-          $currentWorkingDirectory = Get-Location # 현재 작업 디렉토리 (예: D:\a\Ctest\Ctest)
+          # 라이선스 파일의 절대 경로 (현재 작업 디렉토리에 있음)
+          $currentWorkingDirectory = Get-Location
           $licenseFullAbsolutePath = Join-Path $currentWorkingDirectory "license.dat"
+          $licensePathArgument = "--license.cov.path=`"$licenseFullAbsolutePath`""
           
           # -----------------------------------------------------------------
-          # 2. Coverity 설치 프로그램 자체 로그 파일 경로 구성
-          # (이 로그 파일에 설치 실패의 가장 상세한 원인이 기록됩니다. 인자명 확인 필수!)
+          # Coverity 설치 프로그램 자체 로그 파일 경로를 인자로 추가
+          # 이 로그 파일에 설치 실패의 가장 상세한 원인이 기록됩니다.
+          # Coverity 공식 문서에서 "--log-file" 인자명이 정확한지 확인 필수!
           # -----------------------------------------------------------------
-          $coverityInstallerLogLocation = "C:\Coverity\coverity_install_verbose.log" # 설치 경로에 로그 생성
-          $installerLogArgument = "--log-file=`"$coverityInstallerLogLocation`"" # 인자명과 함께 절대 경로 전달 (백틱으로 인용부호 이스케이프)
+          $coverityInstallerLogLocation = "C:\Coverity\coverity_install_verbose.log" # 설치 경로에 로그 파일 생성
+          $installerLogArgument = "--log-file=`"$coverityInstallerLogLocation`"" # 인자명과 함께 절대 경로 전달
 
           # -----------------------------------------------------------------
-          # 3. 모든 설치 인자를 하나의 문자열로 구성 (절대 경로 포함)
-          # 인자에 공백이 포함될 경우를 대비하여 `"$변수명`"` (백틱과 큰따옴표) 형식으로 감쌉니다.
+          # 1. 최종 설치 인자 문자열 구성
           # -----------------------------------------------------------------
-          $installerArguments = "-q -console --installation.dir=C:\\Coverity --license.region=5 --license.agreement=agree --license.type.choice=0 --license.cov.path=`"$licenseFullAbsolutePath`" $installerLogArgument"
+          $baseArguments = "-q -console --installation.dir=C:\\Coverity --license.region=5 --license.agreement=agree --license.type.choice=0"
+          $finalInstallerArguments = "$baseArguments $licensePathArgument $installerLogArgument"
           
           # -----------------------------------------------------------------
-          # 디버깅 출력: 최종 인자 문자열 확인 (매우 중요!)
+          # 2. 실행될 정확한 전체 명령어 문자열 구성 및 콘솔에 출력 (디버깅용)
+          # 이 부분이 실제 CMD나 Bash에서 복사하여 실행할 수 있는 명령어 형태입니다.
           # -----------------------------------------------------------------
-          Write-Host "DEBUG: 실행할 설치 파일 경로: $installerPath"
-          Write-Host "DEBUG: 사용될 라이선스 파일 절대 경로: $licenseFullAbsolutePath"
-          Write-Host "DEBUG: 사용될 설치 프로그램 상세 로그 경로: $coverityInstallerLogLocation"
-          Write-Host "DEBUG: 사용될 최종 설치 인자: $installerArguments"
+          $fullCommandToExecute = "`"$installerPath`" $finalInstallerArguments"
+          Write-Host "DEBUG: 실행될 최종 설치 명령어: $fullCommandToExecute"
+          Write-Host "상세 설치 로그는 '$coverityInstallerLogLocation'에 기록될 예정입니다."
+          Write-Host "설치 프로그램 출력이 콘솔에 직접 표시될 수 있습니다 (프로그램 설정에 따라 다름)."
           
           # -----------------------------------------------------------------
-          # 4. Coverity 설치 프로그램 실행 (PowerShell의 '&' 호출 연산자 사용)
+          # 3. Coverity 설치 프로그램 실행 (PowerShell의 '&' 호출 연산자 사용)
           # -----------------------------------------------------------------
           try {
-              & "$installerPath" $installerArguments # 직접 실행
+              # '&' 연산자를 사용하여 실행 파일을 직접 호출하고 인자를 전달합니다.
+              # 이 방법은 실행 파일의 표준 출력/에러를 GitHub Actions 로그에 직접 보여줄 가능성이 높습니다.
+              & "$installerPath" $finalInstallerArguments
               $exitCode = $LASTEXITCODE # 실행된 프로세스의 종료 코드를 가져옵니다.
           } catch {
+              # PowerShell이 실행 파일 호출 자체에서 예외를 던질 경우 (예: 파일 없음, 권한 없음)
               Write-Error "Coverity 설치 프로그램 호출 중 PowerShell 예외 발생: $($_.Exception.Message)"
-              $exitCode = 9999
+              $exitCode = 9999 # 예외 발생 시 임의의 종료 코드 (0이 아닌 값)
           }
           
+          # -----------------------------------------------------------------
+          # 4. 설치 실패 시 상세 로그 파일 내용 출력 (가장 중요!)
+          # -----------------------------------------------------------------
           if ($exitCode -ne 0) {
               Write-Error "Coverity 설치 프로그램 실행 중 오류 발생. 종료 코드: $exitCode"
               
-              # -----------------------------------------------------------------
-              # 5. 실패 시 상세 로그 파일 내용 출력 (가장 중요!)
-              # -----------------------------------------------------------------
               Write-Host "`n==== Coverity 설치 프로그램 상세 로그 파일 내용 ===="
               if (Test-Path $coverityInstallerLogLocation) {
                   Get-Content $coverityInstallerLogLocation | Write-Host
@@ -177,7 +192,7 @@ jobs:
               }
               Write-Host "===================================================="
 
-              # (임시 폴더 로그 확인 로직 - 이전 답변에서 제공된 부분. 필요시 유지.)
+              # (임시 폴더 로그 확인 로직: 이전 답변에서 제공된 부분, 필요시 유지)
               $coveritySpecificLog2 = Join-Path $env:TEMP "coverity_installer_*.log"
               Write-Host "`n==== Coverity 설치 프로그램 임시 폴더 로그 확인 ===="
               Get-ChildItem -Path $env:TEMP -Filter "coverity_installer_*.log" | ForEach-Object {
@@ -191,7 +206,7 @@ jobs:
           Write-Host "Coverity 설치 프로그램 실행 완료."
           
           # -----------------------------------------------------------------
-          # 6. 설치 후 Coverity CLI PATH 설정 및 확인
+          # 5. 설치 후 Coverity CLI PATH 설정 및 확인
           # -----------------------------------------------------------------
           $coverityBinPath = "C:\Coverity\bin" # 인자로 지정한 설치 경로 기준
           if (Test-Path $coverityBinPath) {
