--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -157,10 +157,24 @@ jobs:
           # -----------------------------------------------------------------
           # 3. Coverity 설치 프로그램 실행 (PowerShell의 '&' 호출 연산자 사용)
           # -----------------------------------------------------------------
-          Write-Host "Coverity 설치 시작."
-          & "$installerPath" $finalInstallerArguments
-          $exitCode = $LASTEXITCODE
-          Write-Host "Coverity 설치 프로그램 실행 완료."
+          
+          # Write-Host "Coverity 설치 시작."
+          # & "$installerPath" $finalInstallerArguments
+          # $exitCode = $LASTEXITCODE
+          # Write-Host "Coverity 설치 프로그램 실행 완료."
+
+          try {
+              Write-Host "Coverity 설치 프로그램 실행 및 완료 대기 중..."
+              Start-Process -FilePath "$installerPath" `
+                            -ArgumentList "$finalInstallerArguments" `
+                            -Wait ` # <--- 이 옵션이 설치가 완료될 때까지 기다립니다!
+                            -PassThru `
+              
+              $exitCode = $LASTEXITCODE # 프로세스가 종료된 후의 종료 코드를 가져옵니다.
+          } catch {
+              Write-Error "Coverity 설치 프로그램 호출 중 PowerShell 예외 발생: $($_.Exception.Message)"
+              $exitCode = 9999
+          }
           
           # -----------------------------------------------------------------
           # Coverity 설치 경로 (C:\Coverity) 내용 확인
