--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,35 +1,43 @@
+# GitHub Actions 워크플로우 정의 파일
+# 이 파일은 C++ 프로젝트의 자동화된 빌드, 테스트, 코드 분석을 수행합니다.
+# 파일 위치: .github/workflows/deploy.yml
+
+# 워크플로우의 이름을 지정합니다. 이 이름은 GitHub의 Actions 탭에서 확인할 수 있습니다.
 name: Software Verification System
 
+# 워크플로우 트리거 설정: 언제 이 워크플로우를 실행할지 정의합니다.
 on:
   push:
-    # tags:
-      # - 'v*'
-    branches: [ "main" ]
-  # pull_request:
-  #   branches: [ "main" ]
+    branches: [ "main" ] # main 브랜치에 푸시될 때 트리거
+  workflow_dispatch: # GitHub 웹사이트에서 수동 실행 가능
 
-  workflow_dispatch:
-
+# 전역 환경 변수 설정: 워크플로우 전체에서 사용할 수 있는 변수들을 정의합니다.
 env:
-  MSBUILD_PATH: ''
+  MSBUILD_PATH: '' # Visual Studio의 MSBuild.exe 경로를 저장할 변수
+
+  # Coverity Installer 다운로드 및 캐싱 관련 설정 (여기서 URL과 파일명을 정의)
   INSTALLER_DOWNLOAD_URL: http://160.187.202.144/downloads/cov-analysis-win64-2024.12.1.exe # <-- 여기에 실제 서버 URL 입력
-  INSTALLER_NAME: cov-analysis-win64-2024.12.1.exe # 다운로드될 파일명
-  INSTALLER_VERSION: 2024.12.1 # <--- 설치 파일의 버전이 바뀔 때마다 이 값을 변경
-  COVERITY_ORIGINAL_INSTALLER_NAME: cov-analysis-win64-2024.12.1.exe
+  INSTALLER_NAME: cov-analysis-win64-2024.12.1.exe # 다운로드/캐시/설치될 파일명 (리포지토리 루트에 저장)
+  INSTALLER_VERSION: 2024.12.1 # <--- 설치 파일 버전이 바뀔 때마다 이 값을 변경 (캐시 갱신용)
+  COVERITY_ORIGINAL_INSTALLER_NAME: cov-analysis-win64-2024.12.1.exe # 재조립/다운로드된 원본 설치 파일 이름 (INSTALLER_NAME과 동일)
 
 jobs:
   Build-And-Analysis:
-    runs-on: windows-latest
+    runs-on: windows-latest # 최신 버전의 Windows Server를 사용
     
+    # GitHub Actions가 필요로 하는 보안 권한 설정
     permissions:
-      security-events: write
-      actions: write
-      contents: write
+      security-events: write # CodeQL, Cppcheck 제거 시 필요 없을 수 있지만, 혹시 몰라 유지.
+      actions: write # GitHub Actions 실행을 위한 기본 권한 (릴리즈 생성 등)
+      contents: write # 저장소 코드를 읽고 (체크아웃), 캐시를 쓰고, 릴리즈 에셋을 업로드하기 위한 권한
 
+    # steps: 작업 내에서 순차적으로 실행될 단계들을 정의
     steps:
+      # Step 1: 저장소 코드 가져오기
       - name: 코드 체크아웃
         uses: actions/checkout@v3
 
+      # Step 2: Coverity 라이선스 파일 생성 (Secrets에서 내용 가져와 license.dat 파일 생성)
       - name: Coverity 라이선스 파일 생성
         shell: pwsh
         env:
@@ -43,9 +51,6 @@ jobs:
               Write-Host "GitHub 저장소의 Settings -> Secrets and variables -> Actions 에 'COVERITY_ANALYSIS_LICENSE' secret이 올바르게 설정되어 있는지 확인하세요."
               exit 1
           }
-
-          # 라이선스 내용을 파일에 씁니다.
-          # -NoNewline을 사용하여 Secret 값 끝에 불필요한 새 줄이 추가되지 않도록 합니다.
           $env:COVERITY_LICENSE_CONTENT | Out-File -FilePath $licenseFilePath -Encoding UTF8 -NoNewline
           
           if (-not (Test-Path $licenseFilePath)) {
@@ -53,38 +58,35 @@ jobs:
               exit 1
           }
           Write-Host "라이선스 파일($licenseFilePath)이 성공적으로 생성되었습니다."
-          # 보안을 위해 라이선스 파일의 내용은 로그에 출력하지 않습니다.
-
           Write-Host "`n==== 생성된 라이선스 파일 확인 ===="
-          # 특정 파일만 확인 (권장)
           Get-ChildItem -Path $licenseFilePath | Format-Table Name, Length, LastWriteTime -AutoSize
-          # 또는 현재 디렉토리 전체 파일 목록에서 찾기
-          Get-ChildItem -Path "./" -File | Where-Object {$_.Name -eq $licenseFileName} | Format-Table Name, Length, LastWriteTime -AutoSize
           Write-Host "==============================="
 
+      # Step 3: Coverity Installer 캐시 복원 시도
+      - name: Coverity Installer Cache 복원 시도
+        id: cache-installer
+        uses: actions/cache@v3
+        with:
+          path: ${{ env.INSTALLER_NAME }} # 캐시할 파일의 경로
+          key: ${{ runner.os }}-installer-${{ env.INSTALLER_NAME }}-${{ env.INSTALLER_VERSION }} # 고유한 캐시 키
+          restore-keys: | # 이전 버전의 캐시도 복원 시도 (버전 업데이트 시 새로운 캐시가 없으면 이전 캐시 사용)
+            ${{ runner.os }}-installer-${{ env.INSTALLER_NAME }}-
 
-      - name: Coverity Installer Download from HTTP Server
+      # Step 4: Coverity Installer 다운로드 (캐시 히트가 아닐 경우에만 실행)
+      - name: Coverity Installer 다운로드 (HTTP 서버에서)
+        if: steps.cache-installer.outputs.cache-hit != 'true' # 캐시 히트가 아닐 경우에만 이 스텝 실행
         shell: pwsh
-        env:
-          INSTALLER_DOWNLOAD_URL: http://160.187.202.144/downloads/cov-analysis-win64-2024.12.1.exe 
-          # 다운로드될 파일의 로컬 경로 및 이름 (워크플로우 작업 디렉토리 기준)
-          LOCAL_INSTALLER_PATH: cov-analysis-win64-2024.12.1.exe 
         run: |
+          Write-Host "캐시 히트가 아니므로 설치 파일을 다운로드합니다."
           $downloadUrl = "${{ env.INSTALLER_DOWNLOAD_URL }}"
-          $outputPath = "${{ env.LOCAL_INSTALLER_PATH }}"
-
+          $outputPath = "${{ env.INSTALLER_NAME }}" # 캐시할 경로와 동일해야 함
+          
           Write-Host "Coverity 설치 파일 다운로드 시작..."
           Write-Host "URL: $downloadUrl"
           Write-Host "저장 위치: $outputPath"
 
           try {
-              # Invoke-WebRequest를 사용하여 파일 다운로드
-              # -Uri: 다운로드할 URL
-              # -OutFile: 다운로드된 파일을 저장할 경로
-              # -TimeoutSec: 다운로드 타임아웃 (초). 대용량 파일에 충분히 큰 값 설정 (예: 10분 = 600초)
-              # -ErrorAction Stop: 오류 발생 시 스크립트 중단
               Invoke-WebRequest -Uri $downloadUrl -OutFile $outputPath -TimeoutSec 600 -ErrorAction Stop
-
               if (-not (Test-Path $outputPath)) {
                   throw "파일 다운로드에 실패했습니다. 파일이 생성되지 않았습니다."
               }
@@ -96,12 +98,19 @@ jobs:
               Write-Error "URL ($downloadUrl)이 GitHub Runner에서 접근 가능한지, 또는 네트워크 문제가 없는지 확인하세요."
               exit 1
           }
-
-          # (선택 사항: 다운로드된 파일 목록 확인)
           Write-Host "`n==== 다운로드 후 현재 디렉토리 파일 목록 ===="
           Get-ChildItem -Path "./" -File | Format-Table Name, Length, LastWriteTime -AutoSize
           Write-Host "============================"
 
+      # Step 5: 다운로드된 Installer를 캐시에 저장 (다운로드가 발생했을 경우에만)
+      - name: Coverity Installer Cache 저장
+        if: steps.cache-installer.outputs.cache-hit != 'true' # 다운로드했으면 캐시에 저장
+        uses: actions/cache@v3
+        with:
+          path: ${{ env.INSTALLER_NAME }}
+          key: ${{ runner.os }}-installer-${{ env.INSTALLER_NAME }}-${{ env.INSTALLER_VERSION }}
+
+      # Step 6: 디스크 공간 확인 (GB 단위)
       - name: 디스크 공간 확인 (GB 단위)
         shell: pwsh
         run: |
@@ -109,108 +118,71 @@ jobs:
           Get-PSDrive -PSProvider FileSystem | Select-Object Name, Root, @{Name='Free(GB)'; Expression={$_.Free / 1GB -as [int]}}, @{Name='Used(GB)'; Expression={$_.Used / 1GB -as [int]}}, @{Name='Size(GB)'; Expression={$_.Size / 1GB -as [int]}} | Format-Table -AutoSize
           Write-Host "============================================="
 
+      # Step 7: Coverity 설치 프로그램 실행 (지정된 인자 및 라이선스 파일 사용)
       - name: Coverity 설치 프로그램 실행
         shell: pwsh
         env:
-          COVERITY_ORIGINAL_INSTALLER_NAME: cov-analysis-win64-2024.12.1.exe
+          COVERITY_ORIGINAL_INSTALLER_NAME: cov-analysis-win64-2024.12.1.exe 
         run: |
-          # 실행할 설치 파일의 절대 경로 (현재 작업 디렉토리에 있음)
           $installerPath = "./${{ env.COVERITY_ORIGINAL_INSTALLER_NAME }}" 
-          
-          # 라이선스 파일의 절대 경로 (현재 작업 디렉토리에 있음)
           $currentWorkingDirectory = Get-Location
           $licenseFullAbsolutePath = Join-Path $currentWorkingDirectory "license.dat"
           $licensePathArgument = "--license.cov.path=`"$licenseFullAbsolutePath`""
           
-          # -----------------------------------------------------------------
-          # 1. 최종 설치 인자 문자열 구성
-          # -----------------------------------------------------------------
-          $baseArguments = "-q -console --installation.dir=""C:\\Program Files\\Coverity"" --license.region=5 --license.agreement=agree --license.type.choice=0"
-          $finalInstallerArguments = "$baseArguments $licensePathArgument"
-          
-          # -----------------------------------------------------------------
-          # 2. 실행될 정확한 전체 명령어 문자열 구성 및 콘솔에 출력 (디버깅용)
-          # 이 부분이 실제 CMD나 Bash에서 복사하여 실행할 수 있는 명령어 형태입니다.
-          # -----------------------------------------------------------------
-          $fullCommandToExecute = "`"$installerPath`" $finalInstallerArguments"
-          Write-Host "DEBUG: 실행될 최종 설치 명령어: $fullCommandToExecute"
-          
-          # -----------------------------------------------------------------
-          # 3. Coverity 설치 프로그램 실행 (PowerShell의 '&' 호출 연산자 사용)
-          # -----------------------------------------------------------------
-          
-          # Write-Host "Coverity 설치 시작."
-          # & "$installerPath" $finalInstallerArguments
-          # $exitCode = $LASTEXITCODE
-          # Write-Host "Coverity 설치 프로그램 실행 완료."
+          # Coverity 설치 프로그램 자체 로그 파일 (설치 실패 시 이 로그를 확인)
+          $coverityInstallerLogLocation = "C:\Coverity\coverity_install_verbose.log"
+          $installerLogArgument = "--log-file=`"$coverityInstallerLogLocation`""
 
+          $baseArguments = "-q -console --installation.dir=""C:\\Program Files\\Coverity"" --license.region=5 --license.agreement=agree --license.type.choice=0"
+          $finalInstallerArguments = "$baseArguments $licensePathArgument $installerLogArgument"
+          
+          Write-Host "Coverity 설치 프로그램 실행 중..."
           try {
-              Write-Host "Coverity 설치 프로그램 실행 및 완료 대기 중..."
               Start-Process -FilePath "$installerPath" `
                             -ArgumentList "$finalInstallerArguments" `
-                            -Wait ` # <--- 이 옵션이 설치가 완료될 때까지 기다립니다!
-              
-              $exitCode = $LASTEXITCODE # 프로세스가 종료된 후의 종료 코드를 가져옵니다.
+                            -Wait ` # 설치 완료까지 대기
+                            -PassThru `
+                            | Out-Null
+              $exitCode = $LASTEXITCODE
           } catch {
               Write-Error "Coverity 설치 프로그램 호출 중 PowerShell 예외 발생: $($_.Exception.Message)"
               $exitCode = 9999
           }
           
-          # -----------------------------------------------------------------
-          # Coverity 설치 경로 (C:\Coverity) 내용 확인
-          # -----------------------------------------------------------------
-          $coverityInstallRoot = "C:\\Program Files\\Coverity" # 설치 경로 변수
-
-          Write-Host "`n==== Coverity 설치 경로 '$coverityInstallRoot' 내용 ===="
-          if (Test-Path $coverityInstallRoot) {
-              # 설치 루트 폴더의 내용 확인
-              Get-ChildItem -Path $coverityInstallRoot -Force | Format-Table Name, LastWriteTime, Mode, Length -AutoSize
-              
-              Write-Host "`n==== '$coverityInstallRoot' 하위 폴더에서 'cov-build.exe' 찾기 ===="
-              # cov-build.exe 파일을 하위 폴더에서 재귀적으로 찾기
-              $covBuildExecutable = Get-ChildItem -Path $coverityInstallRoot -Recurse -Filter "cov-build.exe" -ErrorAction SilentlyContinue | Select-Object -First 1
-              
-              if ($covBuildExecutable) {
-                  Write-Host "cov-build.exe 발견: $($covBuildExecutable.FullName)"
-                  # PATH에 추가할 폴더 (cov-build.exe가 있는 디렉토리)
-                  $coverityBinPath = $covBuildExecutable.DirectoryName
-                  Write-Host "자동으로 찾은 Coverity CLI 경로: $coverityBinPath"
-              } else {
-                  Write-Warning "설치 경로 '$coverityInstallRoot' 내에서 'cov-build.exe'를 찾을 수 없습니다. 설치가 예상과 다르게 되었을 수 있습니다."
-                  # PATH에 추가할 경로를 기본값으로 설정 (혹시 모를 상황 대비)
-                  $coverityBinPath = Join-Path $coverityInstallRoot "bin"
-              }
-          } else {
-              Write-Error "ERROR: Coverity 설치 경로 '$coverityInstallRoot'를 찾을 수 없습니다. 설치가 실패했을 가능성이 높습니다."
-              $coverityBinPath = Join-Path $coverityInstallRoot "bin" # PATH 추가 시도용 기본값
+          if ($exitCode -ne 0) {
+              Write-Error "Coverity 설치 프로그램 실행 중 오류 발생. 종료 코드: $exitCode"
+              Write-Host "`n==== Coverity 설치 프로그램 상세 로그 파일 내용 ===="
+              if (Test-Path $coverityInstallerLogLocation) { Get-Content $coverityInstallerLogLocation | Write-Host }
+              else { Write-Host "상세 로그 파일 ($coverityInstallerLogLocation)을 찾을 수 없거나 생성되지 않았습니다." }
+              exit 1
           }
-          Write-Host "============================================="
+          Write-Host "Coverity 설치 프로그램 실행 완료."
+          
+          # Coverity CLI PATH 설정 및 확인
+          $coverityInstallRoot = "C:\\Program Files\\Coverity"
+          $coverityBinPath = ""
+          if (Test-Path $coverityInstallRoot) {
+              $covBuildExecutable = Get-ChildItem -Path $coverityInstallRoot -Recurse -Filter "cov-build.exe" -ErrorAction SilentlyContinue | Select-Object -First 1
+              if ($covBuildExecutable) { $coverityBinPath = $covBuildExecutable.DirectoryName }
+              else { $coverityBinPath = Join-Path $coverityInstallRoot "bin" }
+          } else { $coverityBinPath = Join-Path $coverityInstallRoot "bin" }
 
-          # -----------------------------------------------------------------
-          # Coverity CLI PATH 설정 및 확인 (위에서 찾은 경로를 사용)
-          # -----------------------------------------------------------------
-          if (Test-Path $coverityBinPath) { # 찾은 경로가 실제로 존재하는지 다시 확인
-              $env:PATH += ";$coverityBinPath"
-              Write-Host "Coverity CLI 경로 '$coverityBinPath'가 PATH에 추가되었습니다."
-              cov-configure --msvc
+          if (Test-Path $coverityBinPath) {
+              echo "PATH=$env:PATH;$coverityBinPath" >> $env:GITHUB_ENV # PATH를 다음 스텝으로 유지
+              Write-Host "Coverity CLI 경로 '$coverityBinPath'가 PATH 환경 변수에 영구적으로 추가되었습니다."
+              cov-configure --msvc # 이 스텝 내에서 설정 확인
           } else {
               Write-Warning "Coverity CLI 경로 '$coverityBinPath'를 찾을 수 없어 PATH에 추가하지 못했습니다. CLI 사용 불가."
           }
 
-
-
-      # -----------------------------------------------------
-      # Step 4: Visual Studio 빌드 도구 설정 (기존 스텝 유지)
-      # -----------------------------------------------------
+      # Step 8: Visual Studio 빌드 도구 설정
       - name: Visual Studio 개발 환경 설정
         id: setup_msbuild
         uses: microsoft/setup-msbuild@v1.3.1
         env:
           ACTIONS_ALLOW_UNSECURE_COMMANDS: true
 
-      # -----------------------------------------------------
-      # Step 5: MSBuild 경로 저장 (기존 스텝 유지)
-      # -----------------------------------------------------
+      # Step 9: MSBuild 경로 저장
       - name: MSBuild 경로 저장
         run: |
           $msbuildPath = vswhere.exe -latest -requires Microsoft.Component.MSBuild -find MSBuild\**\Bin\MSBuild.exe
@@ -218,44 +190,47 @@ jobs:
           Write-Host "MSBuild 경로가 설정되었습니다: $msbuildPath"
         shell: pwsh
 
-
-      # -----------------------------------------------------
-      # Step 6: Visual Studio 솔루션 빌드 (Coverity cov-build로 캡처)
-      # -----------------------------------------------------
-
+      # Step 10: Coverity Build Capture and Solution Build (cov-build를 사용하여 빌드 캡처)
       - name: Coverity Build Capture and Solution Build
         shell: pwsh
         env:
           COVERITY_INTERMEDIATE_DIR: idir # Coverity 중간 디렉토리 이름
         run: |
-          # MSBuild 경로 확인 (필수 기능)
           if (-not (Test-Path $env:MSBUILD_PATH)) {
             Write-Error "MSBuild 경로를 찾을 수 없습니다: $env:MSBUILD_PATH"
             exit 1
           }
+          New-Item -ItemType Directory -Path $env:COVERITY_INTERMEDIATE_DIR -Force | Out-Null
           
-          # cov-build가 실행할 빌드 명령어 문자열 구성
           $buildCommandString = "`"$env:MSBUILD_PATH`" Project.sln /p:Configuration=`"Release`""
+          $covBuildLogOutput = "cov_build_stdout.log"
+          $covBuildLogError = "cov_build_stderr.log"
 
-          $covBuildLogOutput = "cov_build_stdout.log" # cov-build의 표준 출력 저장 파일
-          $covBuildLogError = "cov_build_stderr.log"   # cov-build의 표준 에러 저장 파일
-
+          Write-Host "Coverity 빌드 캡처 (cov-build) 실행 및 완료 대기 중..."
           try {
-              Write-Host "Coverity 빌드 캡처 (cov-build) 실행 및 완료 대기 중..." # 시작 메시지
               Start-Process -FilePath "cov-build" `
                             -ArgumentList @(
                                 "--dir",
                                 "${{ env.COVERITY_INTERMEDIATE_DIR }}",
                                 $buildCommandString
                             ) `
-                            -Wait ` # cov-build가 완료될 때까지 기다립니다.
-                            -NoNewWindow ` # 새로운 창이 뜨는 것을 방지
-
+                            -Wait `
+                            -NoNewWindow `
+                            -RedirectStandardOutput $covBuildLogOutput `
+                            -RedirectStandardError $covBuildLogError `
+                            | Out-Null
               $exitCode = $LASTEXITCODE
           } catch {
               Write-Error "cov-build 호출 중 PowerShell 예외 발생: $($_.Exception.Message)"
               $exitCode = 9999
           }
           
-          Write-Host "Coverity 빌드 캡처 및 솔루션 빌드 완료. (종료 코드: $exitCode)" # 완료 메시지
+          if ($exitCode -ne 0) {
+              Write-Error "Coverity 빌드 캡처 (cov-build) 실패. 종료 코드: $exitCode"
+              if (Test-Path $covBuildLogOutput) { Write-Host "--- cov-build 표준 출력 ---"; Get-Content $covBuildLogOutput | Write-Host }
+              if (Test-Path $covBuildLogError) { Write-Host "--- cov-build 표준 에러 ---"; Get-Content $covBuildLogError | Write-Host }
+              exit 1
+          }
+          Write-Host "Coverity 빌드 캡처 및 솔루션 빌드 완료. (종료 코드: $exitCode)"
 
+          
