--- a/.github/workflows/deploy2.yml
+++ b/.github/workflows/deploy2.yml
@@ -217,9 +217,9 @@ jobs:
           echo "MSBUILD_PATH=$msbuildPath" >> $env:GITHUB_ENV
           Write-Host "MSBuild 경로가 설정되었습니다: $msbuildPath"
         shell: pwsh
-        
 
-      # Coverity Build Capture and Solution Build
+
+# Coverity Build Capture and Solution Build
       - name: Coverity Build Capture and Solution Build
         shell: pwsh
         env:
@@ -229,6 +229,7 @@ jobs:
             Write-Error "ERROR: MSBuild 경로를 찾을 수 없습니다."; exit 1 }
           New-Item -ItemType Directory -Path $env:COVERITY_INTERMEDIATE_DIR -Force | Out-Null
           
+          # MSBuild 명령 문자열 (여기까지는 동일)
           $buildCommandString = "`"$env:MSBUILD_PATH`" Project.sln /p:Configuration=`"Release`""
 
           try {
@@ -236,16 +237,19 @@ jobs:
                             -ArgumentList @(
                                 "--dir",
                                 "${{ env.COVERITY_INTERMEDIATE_DIR }}",
-                                $buildCommandString
+                                "`"$buildCommandString`" # <--- 여기에 추가적인 큰따옴표를 넣어줍니다.
                             ) `
                             -Wait -NoNewWindow `
               $exitCode = $LASTEXITCODE
           } catch {
-              Write-Error "ERROR: cov-build 호출 중 예외 발생: $($_.Exception.Message)"; $exitCode = 9999 }
+              Write-Error "ERROR: cov-build 호출 중 예외 발생: $($_.Exception.Message)"; $exitCode = 9999
+          }
           
           if ($exitCode -ne 0) {
               Write-Error "ERROR: Coverity 빌드 캡처 실패. 종료 코드: $exitCode"
-              if (Test-Path $covBuildLogOutput) { Get-Content $covBuildLogOutput | Write-Host }
-              if (Test-Path $covBuildLogError) { Get-Content $covBuildLogError | Write-Host }
-              exit 1 }
-
+              # 여기서는 $covBuildLogOutput 및 $covBuildLogError 변수가 정의되지 않아 에러가 발생할 수 있습니다.
+              # 이 부분도 필요하면 수정해야 합니다.
+              # if (Test-Path $covBuildLogOutput) { Get-Content $covBuildLogOutput | Write-Host }
+              # if (Test-Path $covBuildLogError) { Get-Content $covBuildLogError | Write-Host }
+              exit 1
+          }
