--- a/.github/workflows/deploy2.yml
+++ b/.github/workflows/deploy2.yml
@@ -219,7 +219,7 @@ jobs:
         shell: pwsh
 
 
-# Coverity Build Capture and Solution Build
+      # Coverity Build Capture and Solution Build
       - name: Coverity Build Capture and Solution Build
         shell: pwsh
         env:
@@ -229,7 +229,6 @@ jobs:
             Write-Error "ERROR: MSBuild 경로를 찾을 수 없습니다."; exit 1 }
           New-Item -ItemType Directory -Path $env:COVERITY_INTERMEDIATE_DIR -Force | Out-Null
           
-          # MSBuild 명령 문자열 (여기까지는 동일)
           $buildCommandString = "`"$env:MSBUILD_PATH`" Project.sln /p:Configuration=`"Release`""
 
           try {
@@ -237,18 +236,26 @@ jobs:
                             -ArgumentList @(
                                 "--dir",
                                 "${{ env.COVERITY_INTERMEDIATE_DIR }}",
-                                "`"$buildCommandString`" # <--- 여기에 추가적인 큰따옴표를 넣어줍니다.
+                                "`"$buildCommandString`"" # <--- 이전에 수정했던 부분
                             ) `
                             -Wait -NoNewWindow `
               $exitCode = $LASTEXITCODE
           } catch {
-              Write-Error "ERROR: cov-build 호출 중 예외 발생: $($_.Exception.Message)"; $exitCode = 9999
+              # 'ERROR:' 대신 문자열 자체를 직접 전달하거나,
+              # Write-Error의 인자를 더 명확히 합니다.
+              # 옵션 A: 따옴표 안에서 콜론을 제거 (가장 간단)
+              Write-Error "cov-build 호출 중 예외 발생: $($_.Exception.Message)"
+              # 옵션 B: 메시지를 변수에 할당 후 전달 (더 견고)
+              # $errorMessage = "ERROR: cov-build 호출 중 예외 발생: $($_.Exception.Message)"
+              # Write-Error $errorMessage
+              
+              $exitCode = 9999
           }
           
           if ($exitCode -ne 0) {
-              Write-Error "ERROR: Coverity 빌드 캡처 실패. 종료 코드: $exitCode"
-              # 여기서는 $covBuildLogOutput 및 $covBuildLogError 변수가 정의되지 않아 에러가 발생할 수 있습니다.
-              # 이 부분도 필요하면 수정해야 합니다.
+              # 여기서도 'ERROR:' 부분을 검토합니다.
+              Write-Error "Coverity 빌드 캡처 실패. 종료 코드: $exitCode"
+              # 이전처럼 $covBuildLogOutput, $covBuildLogError 변수가 정의되지 않았을 수 있으니 이 부분도 확인 필요
               # if (Test-Path $covBuildLogOutput) { Get-Content $covBuildLogOutput | Write-Host }
               # if (Test-Path $covBuildLogError) { Get-Content $covBuildLogError | Write-Host }
               exit 1
