--- a/.github/workflows/deploy2.yml
+++ b/.github/workflows/deploy2.yml
@@ -229,37 +229,36 @@ jobs:
             Write-Error "ERROR: MSBuild 경로를 찾을 수 없습니다."; exit 1 }
           New-Item -ItemType Directory -Path $env:COVERITY_INTERMEDIATE_DIR -Force | Out-Null
           
-          # MSBuild 명령 문자열
-          # 이 변수 자체에 MSBuild 경로와 인자들이 정확히 따옴표로 감싸져 있어야 합니다.
+          # MSBuild 명령 문자열을 구성합니다.
+          # 이 문자열은 MSBuild.exe의 경로와 빌드 인자들을 포함합니다.
+          # 최종적으로 cov-build가 실행할 명령이 됩니다.
           $msbuildCommand = "`"$env:MSBUILD_PATH`" Project.sln /p:Configuration=`"Release`""
           
-          # 디버깅을 위해 $msbuildCommand의 최종 형태를 출력
           Write-Host "MSBUILD Command to be captured: $msbuildCommand"
 
           try {
-              # Start-Process를 사용하여 cov-build를 실행
-              # ArgumentList 배열에 각 인자를 명확하게 분리하여 전달합니다.
-              # 주의: $msbuildCommand 변수 자체가 이미 따옴표를 포함하고 있으므로,
-              # ArgumentList 내에서 다시 따옴표로 감싸지 않습니다.
+              # Start-Process를 사용하여 cov-build를 실행합니다.
+              # ArgumentList에 각 인자를 명확하게 분리하여 전달합니다.
+              # 핵심 변경: $msbuildCommand 변수 자체를 한 번 더 `"`로 감싸서
+              # cov-build에게 "하나의" 인자로 전달되도록 합니다.
+              # 이때 `"` 앞에 PowerShell 이스케이프 문자(`)를 붙여야 합니다.
               Start-Process -FilePath "C:\Program Files\Coverity\bin\cov-build.exe" `
                             -ArgumentList @(
                                 "--dir",
                                 "${{ env.COVERITY_INTERMEDIATE_DIR }}",
-                                $msbuildCommand # <--- 이 부분이 핵심입니다. 변수 자체를 전달합니다.
+                                "`"$msbuildCommand`"" # <--- 최종 변경 지점: `"`를 사용한 명시적 이스케이프
                             ) `
                             -Wait -NoNewWindow `
               $exitCode = $LASTEXITCODE
           } catch {
-              # YAML 파싱 문제 해결을 위해 'ERROR:' 제거했던 부분 유지
               Write-Error "cov-build 호출 중 예외 발생: $($_.Exception.Message)"; $exitCode = 9999
           }
           
           if ($exitCode -ne 0) {
               Write-Error "Coverity 빌드 캡처 실패. 종료 코드: $exitCode"
-              # 이전처럼 $covBuildLogOutput, $covBuildLogError 변수가 정의되지 않았을 수 있으니 이 부분도 확인 필요
+              # $covBuildLogOutput, $covBuildLogError 변수가 여전히 정의되지 않았을 수 있습니다.
+              # 이 부분을 제거하거나 실제 로그 파일 경로로 교체해야 합니다.
               # if (Test-Path $covBuildLogOutput) { Get-Content $covBuildLogOutput | Write-Host }
               # if (Test-Path $covBuildLogError) { Get-Content $covBuildLogError | Write-Host }
               exit 1
           }
-
-          
